# matching-files-copier

./: .gitignore  LICENSE  Main.hs  matching-files-copier.cabal
src/: Main.hs
test/: Main.hs
