name: matching-files-copier
version: 0.1
cabal-version: 1.22
build-type: Simple
license: BSD3
copyright: (c) Artem Tsushko, 2015
maintainer: artemtsushko@gmail.com
stability: provisional
synopsis: copies files with matching filename beginning from one directory to another
description:
    Provides a program that copies all files with specified beginning from one directory to another
category: Learning
author: Artem Tsushko

executable matching-files-copier
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        unix,
        directory,
        filepath
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-matching-files-copier
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
